assets/main.css
/*
Name: HolmesPortfolio checkin app
Description: portfolio app
Author: David Holmes
Copyright: 2026 David Holmes
Author URI: https://www.holmesportfolio.co.uk
*/
/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
              Main
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
.error {
  font-weight: 600;
  color: #d40d0d;
  margin: 0;
}
*,
*::before,
*::after {
  box-sizing: inherit;
}

html {
  box-sizing: border-box;
}

.car-info,
.holiday-info {
  white-space: pre-line;
  font-weight: 600;
}

.info ul {
  list-style: none;
}

.info li {
  position: relative;
  padding-left: 1.5em;
}

.info li::before {
  content: "🐾";
  position: absolute;
  left: 0;
}

body {
  min-height: 50vh;
  margin: 0;
  display: flex;
  flex-direction: column;
  font-family: Arial, Helvetica, sans-serif;
  background: linear-gradient(135deg, #a9f1ff, #85ebff);
}
main {
  flex: 1;
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
}
.info p,
li {
  font-family: Arial, sans-serif;
  line-height: 1.6;
  color: #000000;
  font-weight: 600;
}
h1,
h2,
h3,
h4,
h5 {
  color: #620499;
  margin-bottom: 0rem;
  margin-top: 0rem;
  padding: 0;
  text-align: center;
}

h1 {
  font-size: 36px;
}

h2 {
  font-size: 30px;
}

h3 {
  font-size: 24px;
}

h4 {
  font-size: 20px;
}

h5 {
  font-size: 19px;
}

h6 {
  font-size: 18px;
}

.visitor-fields input {
  width: 100%;
  box-sizing: border-box;
}

.visitor-check-time,
.visitor-checkout input {
  background-color: rgb(236, 233, 233);
  border: none;
  font-weight: 600;
}

*:focus-visible {
  outline: 5px solid #ce13c4 !important;
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
              main end
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
              containers
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/

.hp-container {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: row;
  align-items: center;
  padding: 2%;
  margin: 2%;
  background-color: #ced3f39d;
  border-radius: 6px;
  width: fit-content;
  max-width: 95vw;
  min-width: min(589px, 95vw);
  min-height: min(440px, 35vw);
  margin-left: auto;
  margin-right: auto;
}

.hp-checkedin-buttons {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1rem;
}

.visitor-fields {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
              containers end
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
         Buttons     
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
.hp-buttons,
.checked-in-search-button {
  background: linear-gradient(135deg, #c8f4fd, #7bcddd);
  color: #000000;
  border: 1px solid #014a58;
  padding: 0.5em 0.8em;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
  transition: all 0.3s ease-in-out;
  font-weight: 600;
  letter-spacing: 0.5px;
  border-radius: 6px;
}
.hp-buttons:hover,
.hp-buttons:focus-visible,
.checked-in-search-button:hover,
.checked-in-search-button:focus-visible {
  color: #ffffff;
  background: linear-gradient(135deg, #288a9e, #3dd6f5);
  transition: all 0.1s ease-in-out;
  cursor: pointer;
}

.checked-in-search-button {
  position: static;
  border: none;
  font-weight: 600;
  position: relative;
  height: 44px;
}

.hp-close-view {
  position: absolute;
  top: 5%;
  left: 5%;
}

.hp-submit {
  align-self: flex-end;
  width: auto;
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
         Buttons end     
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
         opened frame    
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 
         opened frame end
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/

.hp-copyright a:hover {
  color: #1d7d91;
}

.hp-copyright {
  position: relative;
  text-align: center;
  font-weight: bold;
}

.business-logo {
  width: 180px;
  height: auto;
  padding-left: 1em;
  padding-top: 1em;
}
.checked-in-search {
  position: relative;
}

.hp-check-out-search {
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  max-width: 70%;
}
.searchJoin {
  display: flex;
  gap: 8px;
  align-items: center;
}
.search-field {
  flex: 1;
  padding: 10px 95px 10px 10px;
  border: 2px solid #307ca9;
}

.hp-checkin-form {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.hp-field {
  border: 2px solid #307ca9;
  border-radius: 6px;
  overflow: hidden;
}

.visitor-fields label {
  font-weight: bold;
}

@media (max-width: 480px) {
  .hp-checkedin-buttons {
    flex-direction: column;
  }
}

.hidden {
  display: none;
}

